Modification of some files

--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -8,8 +8,12 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <th>
+                    <a href="/todo?orderby=id&order={{order}}">Id</a>
+                </th>
+                <th>
+                    <a href="/todo?orderby=name&order={{order}}">Name</a>
+                </th>
                 <th>Description</th>
                 <th>actions</th>
             </tr>
